style: crossbrowser and mobile fixes

--- a/content/projects/q3.md
+++ b/content/projects/q3.md
@@ -7,7 +7,7 @@ facts:
   - Open-source
   - Admin UI
   - Headless REST API architecture
-  - Role-based access control system
+  - Role-based authorization
   - Built-in Mongo, AWS, Twilio and Mailgun integrations
   - Multi-tenanted, with clusterable web processes
   - Exclusively JavaScript
