style: content changes

--- a/content/projects/q3.md
+++ b/content/projects/q3.md
@@ -16,20 +16,18 @@ slug: 'q3'
 title: 'Q3'
 ---
 
-As both the technical lead and a business partner, I
-realized early with 3merge that we needed a system to
-standardize how we build products and reduce upfront
-development costs. I also recognized our clients shared
-needs, so the value of a system that could allow them to
-share components, collaborate with and benefit from one
-another was appealing.
+As both a technical lead and business partner, I realized
+early with 3merge that we needed a system to standardize our
+practice and reduce upfront development costs. I also
+recognized our clients shared needs, so building portable
+components and modules allowed me to deliver value faster on
+their projects.
 
 Five years later, Q3's in its 4th major version and comes
-packed with features! From authorization to file management
-to email templating to locale editing, it handles most of
-the grunt work developers face with large systems and allows
-them to focus just on the unique business drivers of the
-project.
+packed with features (e.g. authorization, file management,
+email templating, locale editing, etc)! It takes care of the
+grunt work developers face with large systems and allows
+them to focus on their projects' unique business drivers.
 
 ## Links
 
